--- a/EweForum/Views/Topic/ManageTopics.cshtml
+++ b/EweForum/Views/Topic/ManageTopics.cshtml
@@ -102,13 +102,13 @@
                                             @if (User.IsInRole("Admin"))
                                             {
                                                 <td>
-                                                    @if (item.IsActive)
+                                                    @if (!item.IsActive)
                                                     {
                                                         <span class="badge bg-danger">Inactive</span>
                                                     }
                                                     else
                                                     {
-                                                        <span class="bg-success">Active</span>
+                                                        <span class="badge bg-success">Active</span>
                                                     }
                                                 </td>
                                                
