--- a/EweForum/wwwroot/css/main.css
+++ b/EweForum/wwwroot/css/main.css
@@ -335,3 +335,24 @@ main .form-checkbox {
 .main .checkbox-label {
     padding-left:20px;
 }
+
+main .regular-button {
+    padding: 10px !important;
+    
+    
+    border-radius:0 !important;
+    border:none !important;
+}
+    main .regular-button .pink {
+        background-color: lightpink !important;
+        outline: 2px solid pink;
+    }
+
+    main .regular-button .blue {
+        background-color: lightblue !important;
+        outline: 2px solid blue;
+    }
+    main .regular-button .green {
+        background-color: lightgreen !important;
+        outline: 2px solid green;
+    }
