--- a/EweForum/Views/Post/Create.cshtml
+++ b/EweForum/Views/Post/Create.cshtml
@@ -8,62 +8,71 @@
 		@if (TempData["Error"]!=null)
 		{
 			@await Component.InvokeAsync("ErrorMessage",new MessageModel{ ErrorMessage = TempData["Error"].ToString()})
-
 		}
 	</div>
 	<div class="card mt-5 w-75 m-auto">
-		<form>
+		<form asp-action="Create" asp-controller="Post" method="post">
 			<div class="card-body">
 				<h4 class="text-center mt-3 mb-4">Create New Post</h4>
-				@foreach (var i in postTypes)
-				{
+				
 					<div class="ml-2 form-check">
-						<input class="form-check-input" id="@i" type="radio" asp-for="@Model.PostType" value="@postTypes.IndexOf(i)">
+						<input asp-for="@Model.PostType" class="form-check-input"  type="radio"   value="0">
 						<label class="form-check-label" >
-							@i
+						    Article
 						</label>
 					</div>
-				}
-
+					<div class="ml-2 form-check">
+						<input asp-for="@Model.PostType" class="form-check-input"  type="radio"   value="1">
+						<label class="form-check-label" >
+							Event
+						</label>
+					</div>
+				<div class="ml-2 form-check">
+					<input asp-for="@Model.PostType" class="form-check-input"  type="radio" value="2">
+					<label class="form-check-label">
+						Video
+					</label>
+				</div>
+				
 				<div id="text">
 					<div class="form-field">
-						<input placeholder="Title" class="form-input" asp-for="@Model.Title"/>
+						<input asp-for="@Model.Title" placeholder="Title"  class="form-input" />
 					</div>
 					<div class="form-field">
-						<textarea placeholder="What is this post about..." cols="8" rows="6" class="form-textarea" asp-for="@Model.Content">
+						<textarea  asp-form="@Model.Content" placeholder="What is this post about..."  cols="8" rows="6" class="form-textarea" >
 						</textarea>
 					</div>
 				</div>
 				<div id="event">
 					<label class="d-block">Event description: </label>
 					<div class="form-field">
-						<textarea placeholder="Additional information about the event..."  class="form-textarea" cols="8" rows="4" asp-for="@Model.Description">
+						<textarea  asp-for="@Model.EventDescription" placeholder="Additional information about the event..." class="form-textarea" cols="8" rows="4" >
 						</textarea>
 	
 					</div>
 					<div  class="form-field">
 						<label class="d-block">Starts in: </label>
-						<input  type="date" class="form-input" asp-for="@Model.Start" />
+						<input asp-for="@Model.Start" type="date" class="form-input"   />
 					</div>
 					<div class="form-field">
 
 						<label class="d-block">Ends in: </label>
-						<input  type="date" class="form-input" asp-for="@Model.End" />
+						<input asp-for="@Model.End" type="date" class="form-input" />
 					</div>
 				</div>
 				<div id="media" >
 					<div class="form-field"> 
-						<input class="form-input" type="url" placeholder="https://www.youtube.com/" asp-for=@Model.VideoUrl />
+						<input asp-for="@Model.VideoUrl" class="form-input"  type="url" placeholder="https://www.youtube.com/" />
 					</div>
 					<div class="form-field">
-						<textarea class="form-textarea" placeholder="Additional information about the resource..." cols="8" rows="4" asp-for="@Model.Description">
+						<textarea  asp-for="@Model.VideoDescription" class="form-textarea"  placeholder="Additional information about the resource..." cols="8" rows="4" >
 						</textarea>
 					</div>
-
+					<input type="hidden"  asp-for="@Model.TopicId" />
 			    </div>
 			</div>
 			<div class="card-body m-3">
-				<button class="form-button mb-3">Create Post</button>
+				<button class="form-button mb-3" type="submit">Create Post</button>
 			</div>
 		</form>
 		
