--- a/EweForum/Views/Post/ViewReply.cshtml
+++ b/EweForum/Views/Post/ViewReply.cshtml
@@ -3,11 +3,19 @@
 
     @if (Model.Count() == 0)
     {
-        <h5 style="font-weight:400">No replies on this posts</h5>
+        <h5 style="font-weight:400">No replies</h5>
     }
     else
     {
         <div class="card-collumns">
+            <h5 class="text-center text-muted mb-3">Original comment</h5>
+            <div class="mt-2 card  border-info card-body p-3 w-50 original-card comment-card">
+                @ViewBag.Original.Content
+                <div class="d-flex flex-sm-column mt-2 w-100">
+                    <span>Created on:  @ViewBag.Original.CreatedOn</span>
+                    <span>By @ViewBag.Original.Username</span>
+                </div>
+            </div>
             @foreach (var reply in Model)
             {
                 <div class="mt-2 card  card-body p-3 w-50 comment-card">
