--- a/EweForum/wwwroot/css/main.css
+++ b/EweForum/wwwroot/css/main.css
@@ -369,3 +369,10 @@ main .pagination-form  a {
     text-decoration: none!important;
     
 }
+
+main .original-card {
+    -webkit-box-shadow: 0px 0px 86px 3px rgba(0,200,255,0.36);
+    -moz-box-shadow: 0px 0px 86px 3px rgba(0,200,255,0.36);
+    box-shadow: 0px 0px 86px 3px rgba(0,200,255,0.36);
+    margin-bottom:1.5rem;
+}
